fix: resolve code scanning alert